--- a/intro-to-modelling/refs.bib
+++ b/intro-to-modelling/refs.bib
@@ -8,3 +8,45 @@
   year={2006},
   publisher={American Psychological Association}
 }
+
+@article{sugawara2021dissociation,
+  title={Dissociation between asymmetric value updating and perseverance in human reinforcement learning},
+  author={Sugawara, Michiyo and Katahira, Kentaro},
+  journal={Scientific reports},
+  volume={11},
+  number={1},
+  pages={1--13},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@inproceedings{speekenbrink2019identifiability,
+  title={Identifiability of Gaussian Bayesian bandit models},
+  author={Speekenbrink, Maarten},
+  booktitle={2019 Conference on Cognitive Computational Neuroscience},
+  pages={686--688},
+  year={2019},
+  organization={Cognitive Computational Neuroscience}
+}
+
+@incollection{Akaike1973,
+	Address = {London},
+	Author = {H. Akaike},
+	Booktitle = {Breakthroughs in statistics. {Vol 1}},
+	Editor = {S. Kotz and K. L. Johnson},
+	Owner = {maarten},
+	Pages = {610--624},
+	Publisher = {Springer-Verlag},
+	Timestamp = {2013.04.04},
+	Title = {Information theory and an extension of the maximum likelihood principle},
+	Year = {1992[1973]}}
+	
+@article{Schwarz1978,
+	Author = {G. Schwarz},
+	Date-Added = {2012-03-22 13:39:41 +0100},
+	Date-Modified = {2012-03-22 13:39:41 +0100},
+	Journal = {Annals of Statistics},
+	Pages = {461--464},
+	Title = {Estimating the dimension of a model},
+	Volume = {6},
+	Year = {1978}}
